--- a/app/src/main/res/layout/activity_set_pin.xml
+++ b/app/src/main/res/layout/activity_set_pin.xml
@@ -10,10 +10,11 @@
 
     <EditText
         android:id="@+id/newPinInput"
-        android:layout_width="200dp"
+        android:layout_width="220dp"
         android:layout_height="60dp"
         android:inputType="numberPassword"
         android:hint="Nuevo PIN"
+        android:textColorHint="#FFFFFF"
         android:maxLength="4"
         android:textSize="24sp"
         android:letterSpacing="0.2"
@@ -26,10 +27,11 @@
 
     <EditText
         android:id="@+id/confirmInput"
-        android:layout_width="200dp"
+        android:layout_width="220dp"
         android:layout_height="60dp"
         android:inputType="numberPassword"
         android:hint="Confirmar PIN"
+        android:textColorHint="#FFFFFF"
         android:maxLength="4"
         android:textSize="24sp"
         android:letterSpacing="0.2"
@@ -155,5 +157,18 @@
             android:textColor="#FFFFFF"/>
 
     </GridLayout>
+
+    <Button
+        android:id="@+id/guardarPinBtn"
+        android:layout_width="167dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/rounded_button"
+        android:elevation="4dp"
+        android:gravity="center"
+        android:text="Guardar PIN"
+        android:textColor="#ffffff"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
