--- a/app/src/main/res/layout/activity_pin.xml
+++ b/app/src/main/res/layout/activity_pin.xml
@@ -21,8 +21,7 @@
         android:gravity="center"
         android:textColor="#FFFFFF"
         android:layout_marginBottom="48dp"
-        android:backgroundTint="#FFFFFF"
-        android:transformationMethod="PasswordTransformationMethod"/>
+        android:backgroundTint="#FFFFFF" />
 
     <GridLayout
         android:layout_width="match_parent"
