Sistema de gastos e ingresos

--- a/app/src/main/res/layout/activity_pin.xml
+++ b/app/src/main/res/layout/activity_pin.xml
@@ -140,7 +140,7 @@
     </GridLayout>
 
     <Button
-        android:id="@+id/guardarPinBtn"
+        android:id="@+id/ingresarBtn"
         android:layout_width="167dp"
         android:layout_height="80dp"
         android:layout_marginTop="16dp"
