--- a/app/src/main/res/drawable/button_save_background.xml
+++ b/app/src/main/res/drawable/button_save_background.xml
@@ -2,4 +2,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="12dp" />
-    <solid android:color="#2A2A46" /> </shape>
+    <solid android:color="#1A936F" /> </shape>
