--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,12 +4,9 @@
         android:id="@+id/nav_home"
         android:icon="@drawable/ic_home"
         android:title="Inicio" />
-    <item
-        android:id="@+id/nav_stats"
-        android:icon="@drawable/ic_grafi"
-        android:title="Estadísticas" />
+
     <item
         android:id="@+id/nav_profile"
-        android:icon="@drawable/ic_chart"
+        android:icon="@drawable/ic_profile"
         android:title="Perfil" />
 </menu>
