--- a/app/src/main/res/drawable/circle_border.xml
+++ b/app/src/main/res/drawable/circle_border.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <stroke android:width="2dp" android:color="@color/highlight_yellow"/>
+    <stroke android:width="2dp" android:color="@color/white"/>
     <solid android:color="@android:color/transparent"/>
 </shape>
